# multitool

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES.md  README.md
calendar_lib/: Cargo.toml  README.md
calendar_lib/src/: lib.rs
cli/: Cargo.toml
cli/src/: llm.rs  main.rs  tracker.rs
cli/src/tui/: app.rs  menu.rs  mod.rs
cli/src/tui/screens/: llm.rs  mod.rs  tracker.rs
gui/multitool/: ContentView.swift  multitoolApp.swift
gui/multitool.xcodeproj/: project.pbxproj
gui/multitool.xcodeproj/xcuserdata/jonfir.xcuserdatad/xcschemes/: xcschememanagement.plist
llm_lib/: Cargo.toml  README.md
llm_lib/src/: client.rs  error.rs  lib.rs  models.rs
llm_lib/tests/: integration_test.rs
services/example-service/: Cargo.toml
trackerLib/: Cargo.toml
tracker_lib/: Cargo.toml  README.md
tracker_lib/examples/: basic_usage.rs
tracker_lib/src/: api_client.rs  lib.rs  models.rs  search.rs  task.rs
tracker_lib/src/commands/: issue.rs  mod.rs
tracker_lib/tests/: api_client_tests.rs  search_tests.rs  task_tests.rs
utilities/example-util/: Cargo.toml
workflows_lib/: Cargo.toml  README.md
workflows_lib/src/: lib.rs
