[workspace]
resolver = "2"

members = [
    "cli",
    "services/*",
    "utilities/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common dependencies can be defined here
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
