[workspace]
resolver = "2"

members = [
    "cli", "tracker_lib", "llm_lib", "workflows_lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
field_reassign_with_default = "allow"

[workspace.dependencies]
# Common dependencies can be defined here
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.101"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13.1", features = ["json", "query", "socks"] }
clap = { version = "4.5", features = ["derive"] }
serde_norway = "0.9"
mockall = "0.14.0"
http = "1.2"
wiremock = "0.6"
crossterm = "0.28"
ratatui = "0.29"
