[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tracker_lib = { path = "../tracker_lib" }
llm_lib = { path = "../llm_lib" }

[dev-dependencies]
llm_lib = { path = "../llm_lib", features = ["testing"] }
