[package]
name = "tracker_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true

[dev-dependencies]
mockall.workspace = true
http.workspace = true
wiremock.workspace = true
